# Information_Transformation_Algorithms_Task05

./: .gitignore  Cargo.toml  compare_file_sizes.zsh  encode_files_in_folder.zsh  encode_files_in_folder_paralel.zsh  encode_files_in_folder_paralel_11.zsh  encode_files_in_folder_working.zsh  encode_tested_folders working.zsh  encode_tested_folders.zsh  encode_tested_folders_working_11.zsh
burrows_wheeler_transform/: Cargo.toml
burrows_wheeler_transform/src/: lib.rs  pair.rs
move_to_front/: Cargo.toml
move_to_front/src/: lib.rs
src/: main.rs
