[package]
name = "Information_Transformation_Algorithms_Task05"
version = "0.2.0"
edition = "2024"

[dependencies]
burrows_wheeler_transform = {path = "burrows_wheeler_transform"}
move_to_front = {path = "move_to_front"}
huffman_encoding = {git = "https://github.com/Strilets-Glib-FI41mn/Information_Transformation_Algorithms_Task03", tag = "0.5.1"}
zwl_gs = {git = "https://github.com/Strilets-Glib-FI41mn/Information_Transformation_Algorithms_Task04", tag = "0.4.4"}


#CLI:
clap = { version = "4.5.48", features = ["derive"] }
dialoguer = "0.12.0"
serde = { version = "1.0.226", features = ["derive"] }
rayon = "1.11.0"

tempfile = "3.23.0"